fix(phone-validation): align phone and code box

--- a/src/app/clientes/personal-data/phone/phone.component.css
+++ b/src/app/clientes/personal-data/phone/phone.component.css
@@ -82,9 +82,3 @@
     border-radius: 2px;
     background: var(--background);
 }
-
-@media (max-width: 768px) {
-    .grid {
-        grid-template-columns: 1fr; /* 1 coluna em telas pequenas */
-    }
-}
